force-app/main/default/objects/Organization__c/Organization__c.object-meta.xml
<CustomObject>
    <description>Custom object used for connecting external TAM/TED database data with Leads and Contact data.</description>
    <label>Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>