force-app/main/default/objects/Organization__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Populated by Org trigger</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Canceled Customer</fullName>
            </value>
            <value>
                <fullName>Inactive Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>