force-app/main/default/objects/Organization__c/fields/Admin_TAG__c.field-meta.xml
<CustomField>
    <fullName>Admin_TAG__c</fullName>
    <label>Admin TAG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>