force-app/main/default/objects/Organization__c/fields/Apex_last_updated_at__c.field-meta.xml
<CustomField>
    <fullName>Apex_last_updated_at__c</fullName>
    <description>Date for Apex OrgUpdateSweep scheduler</description>
    <label>Apex last updated at</label>
    <type>DateTime</type>
</CustomField>