force-app/main/default/objects/Organization__c/fields/Center_Type__c.field-meta.xml
<CustomField>
    <fullName>Center_Type__c</fullName>
    <label>Center Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>