force-app/main/default/objects/Organization__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the school/center is located.</description>
    <inlineHelpText>City where the school/center is located.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>