force-app/main/default/objects/Organization__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <description>Datetime of created at</description>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created at</label>
    <type>DateTime</type>
</CustomField>