force-app/main/default/objects/Organization__c/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <description>Populated by flow Organization - Fields Sync</description>
    <label>Customer Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Sales</fullName>
            </value>
            <value>
                <fullName>Resting</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>