force-app/main/default/objects/Organization__c/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>Used to monitor the progression of the organization&apos;s data enrichment for each record in the &apos;Organization&apos; object. This field is populated manually by the Operations team. (Sprint 10)</description>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>