force-app/main/default/objects/Organization__c/fields/Enrollment_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Capacity__c</fullName>
    <label>Enrollment Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>