force-app/main/default/objects/Organization__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Sourced first name for main contact at a school/center.</description>
    <externalId>true</externalId>
    <inlineHelpText>Sourced first name for main contact at a school/center.</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>