force-app/main/default/objects/Organization__c/fields/Initial_License_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_License_Date__c</fullName>
    <label>Initial License Date</label>
    <type>Date</type>
</CustomField>