force-app/main/default/objects/Organization__c/fields/Last_Enriched_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Enriched_Date__c</fullName>
    <description>Displays the last date the organization record was enriched. This field will be populated manually by the Operations team. (Sprint 10)</description>
    <label>Last Enriched Date</label>
    <type>Date</type>
</CustomField>