force-app/main/default/objects/Organization__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Sourced last name for main contact at a school/center.</description>
    <externalId>true</externalId>
    <inlineHelpText>Sourced last name for main contact at a school/center.</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>