force-app/main/default/objects/Organization__c/fields/Last_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transfer_Date__c</fullName>
    <description>Latest date from Leads/Contacts tied to the Org. Populated by flow Organization - Fields Sync.</description>
    <inlineHelpText>Latest date from Leads/Contacts tied to the Org, populated via flow.</inlineHelpText>
    <label>Last Transfer Date</label>
    <type>Date</type>
</CustomField>