force-app/main/default/objects/Organization__c/fields/LOGIC_Apex_counter__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Apex_counter__c</fullName>
    <description>Field for Apex sweeper to update to trigger process builders</description>
    <label>LOGIC Apex counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>