force-app/main/default/objects/Organization__c/fields/LOGIC_associated_locations__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_associated_locations__c</fullName>
    <label>LOGIC associated locations</label>
    <summaryForeignKey>Location__c.Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>