force-app/main/default/objects/Organization__c/fields/LOGIC_associated_organizations__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_associated_organizations__c</fullName>
    <description>Populated by rollup helper</description>
    <label>LOGIC associated organizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>