force-app/main/default/objects/Organization__c/fields/LOGIC_Location_Object_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Location_Object_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOGIC Location Object Not Needed</label>
    <type>Checkbox</type>
</CustomField>