force-app/main/default/objects/Organization__c/fields/LOGIC_Organization_Email_Domain2__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Organization_Email_Domain2__c</fullName>
    <formula>If(
NOT(LOGIC_Organization_Generic_Domain__c = TRUE),
SUBSTITUTE(Outbound_Email__c, LEFT(Outbound_Email__c, FIND(&quot;@&quot;, Outbound_Email__c)), NULL),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOGIC Organization Email Domain</label>
    <type>Text</type>
</CustomField>