force-app/main/default/objects/Organization__c/fields/LOGIC_Organization_Email_domain__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Organization_Email_domain__c</fullName>
    <label>LOGIC Org Email domain - Primary Lead</label>
    <length>200</length>
    <type>Text</type>
</CustomField>