force-app/main/default/objects/Organization__c/fields/LOGIC_Organization_Generic_Domain__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Organization_Generic_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOGIC Organization Generic Domain</label>
    <type>Checkbox</type>
</CustomField>