force-app/main/default/objects/Organization__c/fields/LOGIC_Primary_Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Primary_Leads_Count__c</fullName>
    <label>LOGIC Primary Leads Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>