force-app/main/default/objects/Organization__c/fields/Normalized_Mobile_Phone_10_Digit__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Mobile_Phone_10_Digit__c</fullName>
    <formula>if(Normalized_Mobile_Phone_Length__c = 10, Normalized_Mobile_Phone__c,
  if(AND(Normalized_Mobile_Phone_Length__c &gt; 10,
    LEFT(Normalized_Mobile_Phone__c, 1)=&quot;1&quot;),
      LEFT(TRIM(Right(Normalized_Mobile_Phone__c, Normalized_Mobile_Phone_Length__c -1)),10),
  if(Normalized_Mobile_Phone_Length__c &gt; 10,
    LEFT(Normalized_Mobile_Phone__c, 10), &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Mobile Phone - 10 Digit</label>
    <type>Text</type>
</CustomField>