force-app/main/default/objects/Organization__c/fields/Normalized_Mobile_Phone_Length__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Mobile_Phone_Length__c</fullName>
    <formula>LEN( Normalized_Mobile_Phone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Mobile Phone Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>