force-app/main/default/objects/Organization__c/fields/Normalized_Phone_10_Digits__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone_10_Digits__c</fullName>
    <formula>if(Normalized_Phone_Length__c = 10, Normalized_Phone__c, 
  if(AND(Normalized_Phone_Length__c &gt; 10,
     LEFT(Normalized_Phone__c, 1)=&quot;1&quot;),
          LEFT(TRIM(Right(Normalized_Phone__c, Normalized_Phone_Length__c -1)),10),
     if(Normalized_Phone_Length__c &gt; 10,
      LEFT(Normalized_Phone__c, 10), &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Phone - 10 Digits</label>
    <type>Text</type>
</CustomField>