force-app/main/default/objects/Organization__c/fields/Normalized_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone__c</fullName>
    <formula>IF(
   LEN(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(Outbound_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)
   ) = 11,
   MID(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(
       SUBSTITUTE(Outbound_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)
       , 2, 10
   ),
   TRIM(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(Outbound_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized Phone</label>
    <type>Text</type>
</CustomField>