force-app/main/default/objects/Organization__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Manual input from Sales as to the number of Sites/Location</description>
    <inlineHelpText>Manual input from Sales as to the number of Sites/Location</inlineHelpText>
    <label>Number of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>