force-app/main/default/objects/Organization__c/fields/Open_SaaS_Ops__c.field-meta.xml
<CustomField>
    <fullName>Open_SaaS_Ops__c</fullName>
    <description>Populated by Org Trigger</description>
    <label>Open SaaS Ops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>