force-app/main/default/objects/Organization__c/fields/Org_Score_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Org_Score_Engagement__c</fullName>
    <description>Uploaded by DataOps. Used in Lead Score formula.</description>
    <inlineHelpText>Engagement (1-5) - warmth of the lead</inlineHelpText>
    <label>Org Score: Engagement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>