force-app/main/default/objects/Organization__c/fields/Org_Score_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Org_Score_Enrichment__c</fullName>
    <description>Uploaded by DataOps. Used in Lead Score formula.</description>
    <inlineHelpText>Enrichment score (0-X) - degree of conversion maximizing info on the lead</inlineHelpText>
    <label>Org Score: Enrichment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>