force-app/main/default/objects/Organization__c/fields/Org_Score_Fit__c.field-meta.xml
<CustomField>
    <fullName>Org_Score_Fit__c</fullName>
    <description>Uploaded by DataOps. Used in Lead Score formula.</description>
    <inlineHelpText>Fit (A-F) - likelihood of the leading being a Target ECE</inlineHelpText>
    <label>Org Score: Fit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>