force-app/main/default/objects/Organization__c/fields/Org_Score_Total__c.field-meta.xml
<CustomField>
    <fullName>Org_Score_Total__c</fullName>
    <description>Concatenate of all score fields (Fit, Engagement, Enrichment) - uploaded by DataOps</description>
    <inlineHelpText>Concatenate of all score fields (Fit, Engagement, Enrichment) - uploaded by DataOps</inlineHelpText>
    <label>Org Score: Total</label>
    <length>30</length>
    <type>Text</type>
</CustomField>