force-app/main/default/objects/Organization__c/fields/Organization_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Organization_Capacity__c</fullName>
    <description>MAX from Leads tied to Organization, populated from FLOW</description>
    <inlineHelpText>The organization capacity set by the largest capacity of the associated lead records</inlineHelpText>
    <label>Organization Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>