force-app/main/default/objects/Organization__c/fields/Organization_Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Location_Status__c</fullName>
    <description>Single Location or Multi Location, depending on # of Locations tied to Organization</description>
    <formula>IF(  LOGIC_associated_locations__c   &lt;= 1,&quot;Single Location&quot;,&quot;Multi Location&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Single Location or Multi Location, depending on # of Locations tied to Organization</inlineHelpText>
    <label>Organization Location Status</label>
    <type>Text</type>
</CustomField>