force-app/main/default/objects/Organization__c/fields/Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Email__c</fullName>
    <description>Sourced email address for the school primary contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>Sourced email address for the school primary contact.</inlineHelpText>
    <label>Organization Email</label>
    <type>Email</type>
</CustomField>