force-app/main/default/objects/Organization__c/fields/Outbound_Phone__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Phone__c</fullName>
    <description>Sourced phone number for the school or person.</description>
    <inlineHelpText>Sourced phone number for the school or person.</inlineHelpText>
    <label>Organization Phone</label>
    <type>Phone</type>
</CustomField>