force-app/main/default/objects/Organization__c/fields/Owned_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Sales__c</fullName>
    <formula>OR(
Owner:User.Profile.Id = &apos;00e1I000000qsyP&apos;,
Owner:User.Profile.Id = &apos;00e1I000000qt1E&apos;,
Owner:User.Profile.Id = &apos;00e3u000000S8lA&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Sales</label>
    <type>Checkbox</type>
</CustomField>