force-app/main/default/objects/Organization__c/fields/Related_Account_is_Customer__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_is_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Account is Customer</label>
    <type>Checkbox</type>
</CustomField>