force-app/main/default/objects/Organization__c/fields/Related_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Org - used in flow - TAM to Organization matching</description>
    <label>Related Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>