force-app/main/default/objects/Organization__c/fields/Resting_Date__c.field-meta.xml
<CustomField>
    <fullName>Resting_Date__c</fullName>
    <description>Value populated from &quot;OMQ return date&quot; on the Lead. Populated by flow Organization - Fields Sync.</description>
    <inlineHelpText>Value populated from &quot;OMQ return date&quot; on the Lead.</inlineHelpText>
    <label>Resting Date</label>
    <type>Date</type>
</CustomField>