force-app/main/default/objects/Organization__c/fields/Sales_Actionable__c.field-meta.xml
<CustomField>
    <fullName>Sales_Actionable__c</fullName>
    <description>Populated by Org Apex trigger</description>
    <label>Sales Actionable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actionable</fullName>
            </value>
            <value>
                <fullName>Not Actionable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>