force-app/main/default/objects/Organization__c/fields/Sales_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Contacted__c</fullName>
    <description>Latest date from Leads/Contacts tied to the Org. Populated by flow Organization - Fields Sync.</description>
    <inlineHelpText>Latest date from Leads/Contacts tied to the Org, populated via flow.</inlineHelpText>
    <label>Sales Last Contacted</label>
    <type>Date</type>
</CustomField>