force-app/main/default/objects/Organization__c/fields/Sales_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Priority_Score__c</fullName>
    <label>Sales Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>