force-app/main/default/objects/Organization__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>Sourced or enriched name of the school/center.</description>
    <externalId>true</externalId>
    <inlineHelpText>Sourced or enriched name of the school/center.</inlineHelpText>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>