force-app/main/default/objects/Organization__c/fields/Segment_Tag__c.field-meta.xml
<CustomField>
    <fullName>Segment_Tag__c</fullName>
    <description>Designed to enhance lead scoring accuracy and optimize distribution rules by providing refined segmentation. This field will be populated manually by the Operations team. (Sprint 10)</description>
    <label>Segment Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>