force-app/main/default/objects/Organization__c/fields/Source_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Updated_Date__c</fullName>
    <label>Source Updated Date</label>
    <type>Date</type>
</CustomField>