force-app/main/default/objects/Organization__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <externalId>true</externalId>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>