force-app/main/default/objects/Organization__c/fields/State_License__c.field-meta.xml
<CustomField>
    <fullName>State_License__c</fullName>
    <label>State License</label>
    <length>100</length>
    <type>Text</type>
</CustomField>