force-app/main/default/objects/Organization__c/fields/State_URL__c.field-meta.xml
<CustomField>
    <fullName>State_URL__c</fullName>
    <label>State URL</label>
    <type>Url</type>
</CustomField>