force-app/main/default/objects/Organization__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Sourced street address for the school/center.</description>
    <inlineHelpText>Sourced street address for the school/center.</inlineHelpText>
    <label>Street Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>