force-app/main/default/objects/Organization__c/fields/Swim_Lane__c.field-meta.xml
<CustomField>
    <fullName>Swim_Lane__c</fullName>
    <label>Swim Lane</label>
    <length>100</length>
    <type>Text</type>
</CustomField>