force-app/main/default/objects/Organization__c/fields/Sync_Sales_Fields__c.field-meta.xml
<CustomField>
    <fullName>Sync_Sales_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to fire the flow based on the update of many fields across different objects</description>
    <label>Sync Sales Fields</label>
    <type>Checkbox</type>
</CustomField>