force-app/main/default/objects/Organization__c/fields/TAM_ID__c.field-meta.xml
<CustomField>
    <fullName>TAM_ID__c</fullName>
    <description>Matching key/unique ID from external TAM database.</description>
    <inlineHelpText>Matching key/unique ID from external TAM database.</inlineHelpText>
    <label>TAM ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>