force-app/main/default/objects/Organization__c/fields/TAM_match_strength__c.field-meta.xml
<CustomField>
    <fullName>TAM_match_strength__c</fullName>
    <label>TAM match strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>