force-app/main/default/objects/Organization__c/fields/Target_Leads__c.field-meta.xml
<CustomField>
    <fullName>Target_Leads__c</fullName>
    <description>Populated by Org trigger</description>
    <label>Target Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>