force-app/main/default/objects/Organization__c/fields/UCDB_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>UCDB_Center_ID__c</fullName>
    <description>Field populated by DataEng</description>
    <label>UCDB Center ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>