force-app/main/default/objects/Organization__c/fields/Update_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Update_MobilePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update MobilePhone</label>
    <type>Checkbox</type>
</CustomField>