force-app/main/default/objects/Organization__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>Validation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>