force-app/main/default/objects/Organization__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code where the school/center is located.</description>
    <inlineHelpText>Zip Code where the school/center is located.</inlineHelpText>
    <label>Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>