force-app/main/default/objects/Organization__c/recordTypes/BW_Record.recordType-meta.xml
<RecordType>
    <fullName>BW_Record</fullName>
    <active>true</active>
    <description>BW internal organization (from lead)</description>
    <label>BW Record</label>
</RecordType>