force-app/main/default/objects/Organization__c/recordTypes/TAM_Record.recordType-meta.xml
<RecordType>
    <fullName>TAM_Record</fullName>
    <active>true</active>
    <description>TAM Record from database</description>
    <label>TAM Record</label>
</RecordType>