force-app/main/default/objects/Organization__c/listViews/Orgs_Created_THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>Orgs_Created_THIS_WEEK</fullName>
    <columns>NAME</columns>
    <columns>Created_at__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>LOGIC_Apex_counter__c</columns>
    <columns>Apex_last_updated_at__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Orgs Created THIS WEEK</label>
</ListView>