force-app/main/default/objects/Organization__c/listViews/Sales_Ops_UAT_View.listView-meta.xml
<ListView>
    <fullName>Sales_Ops_UAT_View</fullName>
    <columns>NAME</columns>
    <columns>School_Name__c</columns>
    <columns>LOGIC_associated_leads__c</columns>
    <columns>LOGIC_associated_locations__c</columns>
    <columns>LOGIC_associated_accounts__c</columns>
    <columns>LOGIC_associated_Contact__c</columns>
    <columns>LOGIC_Email_domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Ops - UAT View</label>
</ListView>